Java 8 targetCompatibility; better build.gradle
1) Java8 targetCompatibility support thanks to https://github.com/bsideup/jabel
2) better gradle test settings
3) cleanup