@@ -13,8 +13,6 @@ repositories {
   mavenCentral()
 }
 
-sourceCompatibility = 17
-
 javadoc {
   options.encoding = 'UTF-8'
   options.addBooleanOption('html5', true)
@@ -23,14 +21,23 @@ javadoc {
 tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
-  options.release.set(17) // javac --release 7..18+
-  options.deprecation = false // todo step2: deprecated
+  sourceCompatibility = 17 // for the IDE support
+  targetCompatibility = 8
+  options.release.set(8) // javac --release 7..18+
+  options.deprecation = true
+
+  javaCompiler.set( javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(17)
+  })
 
   options.errorprone {
     enabled = true
     disableWarningsInGeneratedCode = true
     excludedPaths = ".*/(build/gen|test).*/.*"
     disable("MissingSummary")
+    disable("ParameterName")
+    disable("UnusedVariable")
+    errorproneArgs = ["--illegal-access=warn"]
   }
 }
 // https://docs.gradle.org/current/userguide/publishing_maven.html
@@ -51,6 +58,10 @@ dependencies {
   implementation("com.google.code.findbugs:jsr305:latest.release")// https://javadoc.io/doc/com.google.code.findbugs/jsr305/latest/index.html
   implementation("com.google.errorprone:error_prone_annotations:latest.release")// https://javadoc.io/doc/com.google.errorprone/error_prone_annotations/latest/index.html
 
+  // Java 8 support
+  annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release' // 0.4.2
+  compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release'
+
   implementation 'javax.servlet:servlet-api:2.5'
 
   implementation 'org.slf4j:slf4j-api:1.7.+'
@@ -58,14 +69,13 @@ dependencies {
     exclude group: 'com.google.auto.value', module: 'auto-value-annotations'
   }
   implementation 'org.mvel:mvel2:latest.release'// 2.4.14
-  implementation("com.github.ben-manes.caffeine:caffeine:latest.release")
+  implementation("com.github.ben-manes.caffeine:caffeine:2.+") // 3.x requires Java 11+
 
   implementation 'org.apache.commons:commons-lang3:3.+'
-  implementation ('commons-lang:commons-lang:2.+')
+  implementation('commons-lang:commons-lang:2.+')
   implementation 'commons-io:commons-io:2.+'
   implementation 'commons-fileupload:commons-fileupload:1.3.+'
   //implementation 'commons-codec:commons-codec:1.+'
-  //implementation 'org.apache.velocity:velocity:1.+'
 
   //*** TEST TEST TEST
 
@@ -99,17 +109,20 @@ idea {
 
 test {
   useJUnit()
-  maxHeapSize = "500m"
+  testLogging {
+    events "passed", "skipped", "failed"
+    showStandardStreams = true // show standard out & err of the test JVM on the console
+    showExceptions = true
+    exceptionFormat = 'full'
+  }
   enableAssertions = true
-
-  testLogging.showStandardStreams = true // show standard out & err of the test JVM on the console
+  maxHeapSize = "500m"
 
   System.setProperty("slf4j.detectLoggerNameMismatch", "true")
   System.setProperty("file.encoding", "UTF-8")
   System.setProperty("user.language", "en")
   Locale.setDefault(new Locale("en", "US"));
 }
-
 lombok {
   version = "latest.release"
 }
